--- a/infex.html
+++ b/infex.html
@@ -50,7 +50,7 @@ body, html { height: 100%; line-height: 1.8;}
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="orange"
+  theme_color="FF9900"
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
 </div>
