--- a/vip.dashboard.html
+++ b/vip.dashboard.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="#A9A9A9"
+  theme_color="#FF9900"
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
 </div>
