--- a/infex.html
+++ b/infex.html
@@ -36,7 +36,7 @@ body, html { height: 100%; line-height: 1.8;}
 </style>
 </head>
 <body>
-<!--  /////////////////// messenger_platform  ////////////////////////// -->    
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -50,11 +50,11 @@ body, html { height: 100%; line-height: 1.8;}
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="FF9900"
+  theme_color="#FF9900"
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
 </div>
-<!--  //////////////////// messenger_platform  ////////////////////////// -->   
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->     
 <!--  ////////////////////////// QR  ////////////////////////// -->
 <style> #overlay {   position: fixed;     display: none;   width: 100%;     height: 100%;   top: 0;     left: 0;     right: 0;   bottom: 0;     background-color: rgba(0,0,0,0.9);   z-index: 2;     cursor: pointer;} #text{   position: absolute;    top: 50%;     left: 50%;    font-size: 20px;     color: white;    transform: translate(-50%,-50%);    -ms-transform: translate(-50%,-50%);} </style> <!-- <body onload="on()"> -->  <div id="overlay" onclick="off()"><div id="text"> <center><h3>scan & download the app</h3>
 <a href="https://snappy.appypie.com/index/app-download/appId/9a986a9e031f">
