--- a/about.html
+++ b/about.html
@@ -1,11 +1,9 @@
-
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤  (CC)-By: Alexandros Papaspyrou V.01.11.19
+Handcrafted With ❤  (CC)-By: Alexandros Papaspyrou V.3.20
 -->
 <!DOCTYPE html>
 <html>
@@ -115,7 +113,11 @@ function w3_close() {mySidebar.style.display = "none";} </script>
     
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 16.03.2020</span>
+    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: <span id="datetime"></span></span>
+    <script>
+var dt = new Date();
+document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +"."+ (("0"+(dt.getMonth()+1)).slice(-2)) +"."+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()).slice(-2)) +":"+ (("0"+dt.getMinutes()).slice(-2));
+</script>
   </div>
 </header>
 
@@ -295,6 +297,13 @@ function w3_close() {mySidebar.style.display = "none";} </script>
   <div class="w3-content" style="max-width:950px">
  
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WELCOME</span></h5>
+      <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script>
+<div class="addthis_tipjar_inline"></div>
+<!-- Appzi: Capture Insightful Feedback -->
+<script async src="https://app.appzi.io/bootstrap/bundle.js?token=g7Yon"></script>
+<!-- End Appzi -->
+
     
     <i class="fa fa-toggle-on" style="font-size:48px;color:green"></i>
     <br> <span class="w3-large w3-center" style="background-color: green; color: white; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">ONLINE</span>
@@ -479,6 +488,7 @@ function openMenu(evt, menuName) {
 }
 document.getElementById("myLink").click();
 </script>
-
+<!-- CHAT OR EMAIL https://www.tawk.to/ --> 
+<script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script>
 </body>
 </html>
