--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
-<!-- CONTACT HTML  V.08.07.19 -->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.3.20
 ┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
 ├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
 ┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘
@@ -24,7 +23,7 @@ body, html { height: 100%; line-height: 1.8;}
 /* Full height image header */
 .bgimg-1 {
     background-position: center; background-size: cover;
-    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    background-image: url("https://images.wallpaperscraft.com/image/bottle_message_shore_154574_1280x720.jpg");
     min-height: 100%;
 }
 .w3-bar .w3-button { padding: 16px;}
@@ -47,56 +46,35 @@ body, html { height: 100%; line-height: 1.8;}
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
 </div>
-<!--  ////////////////////////// messenger_platform  ////////////////////////// -->
-
+<!--  ////////////////////// messenger_platform  //////////////////////// -->
 <!-- ////////////////////////// Navbar ////////////////////////// -->
-
 <!-- Top menu -->
-<div class="w3-top">
-  <div id="myNavbar" style="max-width:100%;margin:auto; background:#1d1919">
-    <div class="w3-button w3-padding-16 w3-left w3-hover-red" onclick="w3_open()"><b><font color="#ebf0f6"><i class="fa fa-bars"></i></font></b></div>
-   		<div class="w3-center w3-padding-16">
-        <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
-        <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
-    </div>
+<div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
+<!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
+<!-- name --><a class="w3-padding-16 w3-hide-small w3-right"><b><font color="orange">SOCIAL & CONTACT &nbsp; &nbsp; </font></b></a>
+<!-- logo --><div class="w3-padding-16"><a href="https://alexandroshub.github.io">
+<img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;"></a> 
+
+    </div> 
   </div>
 </div>
-
-<!--
-
-
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card" id="myNavbar">
-  
-    <!-- Hide right-floated links on small screens and replace them with a menu icon ->
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-black" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-  
-<a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
- 
-<span class="w3-center w3-hide-small w3-hide-medium"><b>Papaspyrou</b></span>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <span class="w3-hide-small w3-hide-medium"><b>Alexandros</b></span></a> 
-</div>
-    <!-- Right-sided navbar links ->
-    <div class="w3-right ">
-    <a href="#port" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i></a>
-    <a href="#me" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user-o"></i></a>
-  
-  </div>
- </div>  
-</div>
-
--->
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"><i class="fa fa-times-circle"></i> &nbsp;  Close</a>
   <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-folder-open-o"></i>&nbsp;  Portfolio</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
 	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
-    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-teal"><i class="fa fa-link"></i>  &nbsp; Links</a> 
-        <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
-    <hr>
-<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+    <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
 <a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
 </nav>
+<!-- scripts --><script>
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {var navbar = document.getElementById("myNavbar"); if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) { navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black"; } else { navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-black", ""); }}
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() { var x = document.getElementById("navDemo");  if (x.className.indexOf("w3-show") == -1) { x.className += " w3-show"; } else { x.className = x.className.replace(" w3-show", ""); }}
+</script>
+<!-- ////////////////////////// Navbar ////////////////////////// -->
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
@@ -121,8 +99,8 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
   <a class="w3-button w3-green" href="tel:+306940548867">Call Me<i class="w3-margin-left fa fa-phone"></i></a>
 
 <button onclick="skype()" class="w3-button w3-blue" ><i class="fa fa-skype"></i></button><script>function skype() { alert("a-papaspyrou@outlook.com.gr");}</script>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black"><i class="fa fa-envelope-o w3-hover-opacity"></i></a>
 </p>
-
 
 <h5>SOCIAL</h5><p>
 <a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
@@ -148,18 +126,17 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <span class="w3-hide-small">
   
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
- 
-<!-- About --><a href=" https://alexandroshub.github.io/about " title="About"><i class="fa fa-info-circle"></i></a> | 
-<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="twitter"><i class="fa fa-twitter"></i></a>
-<!-- facebook -->
-<a href="https://www.facebook.com/papaspyrou.a" title="facebook"><i class="fa fa-facebook-f"></i></a>
-<!-- linkedin -->
-<a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin"></i></a> | 
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </div></span>
 </header>
 
-
+<!-- Footer --> 
+<footer class="w3-center w3-black ">
+<a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a><!-- top -->
+<br><!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
+  <style>div.a {font-size: 12px;}</style>
+<div class="a">
+<p>© 2020 AlexandrosHub  All rights reserved. | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> </p></div>
+</footer>
 <!-- SSM -->
 <style>
 .accordion {    background-color: #eee;    color: #444;  cursor: pointer;   padding: 18px;    width: 100%;   border: none;   text-align: left;    outline: none;   font-size: 15px;   transition: 0.4s; }
@@ -169,11 +146,12 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 .panel {    padding: 0 18px;    background-color: white;    max-height: 0;    overflow: hidden;    transition: max-height 0.2s ease-out;}
 </style>
 
-<p><!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script><!-- www.123formbuilder.com script ends here --></p>
+<!-- www.123formbuilder.com script begins here - -><p>
+<script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script><!-- www.123formbuilder.com script ends here - -></p>
 <script>
 var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < acc.length; i++) {acc[i].onclick = function() { this.classList.toggle("active"); var panel = this.nextElementSibling; if (panel.style.maxHeight){panel.style.maxHeight = null; } else { panel.style.maxHeight = panel.scrollHeight + "px"; }}}
 </script>
- 
+ -->
 <script>
 // Modal Image Gallery
 function onClick(element) {
@@ -224,6 +202,7 @@ Sub: 		papaspyrou.alexandros@gmail.com
   gtag('js', new Date());
   gtag('config', 'UA-128580719-1');
 </script> 
-
-
-<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
+<!--
+┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
+├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
+┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘ -->
