--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <head>
 <meta charset="UTF-8">
+	   <meta http-equiv="Refresh" content="5;url=https://alexandroshub.github.io/infex.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
