--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!-- not updated
 
-<!--
+
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.31.01.20
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
 <!--
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -20,7 +21,7 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <head>
 <meta charset="UTF-8">
-	   <meta http-equiv="Refresh" content="5;url=https://alexandroshub.github.io/infex.html">
+	   <meta http-equiv="Refresh" content="4;url=https://alexandroshub.github.io/infex.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -113,12 +114,11 @@ function closeNav() {
 
 
 <div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
-<!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
-<!-- contact --><a href="https://alexandroshub.github.io/contact.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-envelope"></i></font></b></a>
-<!-- me --><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-user"></i></font></b></a>
-<!-- files --><a href="https://alexandroshub.github.io/portfolio.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-th"></i></font></b></a>
+<!-- menu -->
+<!--<div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
+-->
 <!-- logo --><div class="w3-padding-16">
-<img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;"> 
+<img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:250px;"> 
     </div> 
   </div>
 </div>
@@ -134,8 +134,8 @@ function closeNav() {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Welcome</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Welcome</span><br>
+   
+    <span class="w3-xxlarge">Sorry</span> <span class=" w3-xxlarge w3-red">out-of-date</span> 
 <body onload="typeWriter()">
 <p id="demo" class="w3-large"></p>
 <!-- scripts --><script>
@@ -184,11 +184,14 @@ var speed = 40; function typeWriter() {
 if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i); i++; setTimeout(typeWriter, speed);}}</script> 
 -->
 </body>
-<span class="w3-large w3-hide-small" style="background-color: #0033669C; color: #FF5733; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία.</span>
-    <p><a href="https://alexandroshub.github.io/liveplus" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH  
-    <font color="#FF5733"><i class="fa fa-plus"></i> PLUS</font>
-        </b></a>
-      </p>
+
+<script>
+var i = 0;
+var txt = "Loading new index file.... Please wait.....";
+var speed = 40; function typeWriter() {
+if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i); i++; setTimeout(typeWriter, speed);}}
+</script> 
+   
       </div> 
   
  <span class="w3-hide-small">  
