--- a/liveplus.html
+++ b/liveplus.html
@@ -1,4 +1,5 @@
 
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -108,19 +109,26 @@ function w3_close() {mySidebar.style.display = "none";} </script>
   <center>
 
 <!--PODCAST Section //////////////////////////////////////////// -->
-<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">PODCAST</span></h5>
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">PODCAST</span><span class="w3-tag w3-wide w3-green"><i class="fa fa-podcast"></i></span></h5>
 <div class="w3-center">
 soon</div>
 <!-- ////////////////////////////////////////////////////////// -->
  
 <!--BLOG Section //////////////////////////////////////////// -->
-<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">BLOG</span></h5>
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">BLOG</span><span class="w3-tag w3-wide w3-blue"><i class="fa fa-keyboard-o"></i></span></h5>
 <div class="w3-center">
 <iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe></div>
 <!-- ////////////////////////////////////////////////////////// -->
 <!--TV  Section //////////////////////////////////////////// --> 
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">TV</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">TV</span><span class="w3-tag w3-wide w3-purple"><i class="fa fa-television"></i></span></h5>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/videoseries?list=PLka3wnglUJjrAhsBA-t2VO9c_Lt-KDUUN" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!-- ////////////////////////////////////////////////////////// --> 
+<!--PODCAST Section //////////////////////////////////////////// -->
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">Links</span></h5>
+<div class="w3-center">
+<a href="https://alexandroshub.github.io/internetexplorer.html" class="w3-button"><i class="fa fa-external-link w3-margin-right"></i>Load Internet Explorer</a>
+</div>
+<!-- ////////////////////////////////////////////////////////// --> 
 <!-- ////////////////////////////////////////////////////////// --> 
 <!--PODCAST Section //////////////////////////////////////////// -->
 <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-red">NEXT</span></h5>
