--- a/infex.html
+++ b/infex.html
@@ -51,8 +51,8 @@ body, html { height: 100%; line-height: 1.8;}
   attribution=setup_tool
   page_id="1610585155641169"
   theme_color="#FF9900"
-  logged_in_greeting="Hi! How can i help you?"
-  logged_out_greeting="Hi! How can i help you?">
+  logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
+  logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
 </div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->     
 <!--  ////////////////////////// QR  ////////////////////////// -->
