--- a/about.html
+++ b/about.html
@@ -490,5 +490,28 @@ document.getElementById("myLink").click();
 </script>
 <!-- CHAT OR EMAIL https://www.tawk.to/ --> 
 <script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script>
-</body>
+
+	
+	<script type="text/javascript">
+  var _userway_config = {
+    /* uncomment the following line to override default position*/
+     position: '2',
+    /* uncomment the following line to override default size (values: small, large)*/
+    /* size: 'small', */
+    /* uncomment the following line to override default language (e.g., fr, de, es, he, nl, etc.)*/
+    /* language: 'null', */
+    /* uncomment the following line to override color set via widget (e.g., #053f67)*/
+    /* color: '#FF9900', */
+    /* uncomment the following line to override type set via widget (1=person, 2=chair, 3=eye, 4=text)*/
+    /* type: '1', */
+    /* uncomment the following lines to override the accessibility statement*/
+    /* statement_text: "Our Accessibility Statement", */
+    /* statement_url: "http://www.example.com/accessibility", */
+    /* uncomment the following line to override support on mobile devices*/
+    /* mobile: true, */
+    account: 'DGyOCjFW42'
+  };
+</script>
+<script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
+	</body>
 </html>
