--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.3.20
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.27.3.20
 <!--
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -78,7 +78,6 @@ body, html { height: 100%; line-height: 1.8;}
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
 	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
     <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
-<a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
 </nav>
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
@@ -127,35 +126,37 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
 <!-- Promo -->
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
+     <center>
+      <div class="w3-third w3-hide-small">
+   <h3>Plus</h3>
+   <a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black"> <i class="fa fa-code"></i></a>
+<div class="w3-row " style="padding-bottom:16px">
+<p>η αγαπημένη μου ενότητα! podcasting, blogging, videos, links  και ότι άλλο μπορεί να προκύψει.</p>
     
-      <div class="w3-third w3-hide-small">
-   <h3>
-   <i class="fa fa-code"></i>
-   Coding Time.</h3>
-<div class="w3-row " style="padding-bottom:16px">
-<p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο, αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.</p>
-    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black"><i class="fa fa-envelope-o w3-hover-opacity"></i></a></p>
 </div>
     </div>
-      <div class="w3-third w3-hide-small">
-   <h3>
-   <i class="fa fa-code"></i>
-   Coding Time.</h3>
+      <div class="w3-third">
+   <h3>Portfolio</h3>
 <div class="w3-row " style="padding-bottom:16px">
-<p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο, αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.</p>
-    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black"><i class="fa fa-envelope-o w3-hover-opacity"></i></a></p>
-</div>
-    </div>
+<a href="https://alexandroshub.github.io/portfolio.html"  class="w3-button w3-black">
+ <i class="fa fa-code"></i>
+ </a> <p>Δες εργασίες κατασκευές κώδικες και μελέτες,
+ όπως και άλλα θέματα  με τα οποία έχω ασχοληθεί.
+ </p>
+      
+    </div></div>
     <div class="w3-third w3-hide-small">
    <h3>
-   <i class="fa fa-user-o"></i>
+   
    About Me.</h3>
+   <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black">  <i class="fa fa-user-o"></i></a>
+  
 <div class="w3-row " style="padding-bottom:16px">
-<p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο, αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.</p>
-    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black"><i class="fa fa-envelope-o w3-hover-opacity"></i></a></p>
+<p> Δες το βιογραφικό μου  το background τα  hobby μου και άλλα σχετικά με εμένα.</p>
+    <p> </p>
 </div>
     </div>
-  </div></div>
+ </center>  </div></div>
 
 <!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
