--- a/python.html
+++ b/python.html
@@ -1,11 +1,18 @@
 <!-- SpecialPage Python_V.28.03.20
 
+
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
+
+CC-BY:		Alexandros Papaspyrou
+URL:		https://alexandroshub.github.io
+Contact: 	a-papaspyrou@outlook.com.gr
 -->
+
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou | Python</title>
@@ -36,6 +43,7 @@ body, html {
 </style>
 <body>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
+<!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -44,14 +52,15 @@ body, html {
   js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+<!-- Your customer chat code -->
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="#A9A9A9"
-  logged_in_greeting="Hi! How can i help you?"
-  logged_out_greeting="Hi! How can i help you?">
+  theme_color="#FF9900"
+  logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
+  logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
 </div>
-<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->       
 <!-- ////////////////////////// Navbar ////////////////////////// -->
 <!-- Top menu -->
 <div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
@@ -137,12 +146,9 @@ function w3_close() {mySidebar.style.display = "none";} </script>
     </div>
 
     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
-<p>Η <b> Python</b> είναι μια δυναμική αντικειμενοστραφής γλώσσα προγραμματισμού που μπορεί να χρησιμοποιηθεί για πολλά είδη ανάπτυξης λογισμικού. Προσφέρει ισχυρή υποστήριξη για ενσωμάτωση με άλλες γλώσσες και εργαλεία, και διαθέτει μία πλούσια γκάμα βιβλιοθηκών. <br><br>
-<b>Το αντικείμενο του Αυτοματισμού</b>
-Η Python δημιουργήθηκε από τον Ολλανδό Γκβίντο βαν Ρόσσουμ (Guido van Rossum) το 1990. Ο κύριος στόχος της είναι η αναγνωσιμότητα του κώδικά της και η ευκολία χρήσης της και το συντακτικό της επιτρέπει στους προγραμματιστές να εκφράσουν έννοιες σε λιγότερες γραμμές κώδικα απ'ότι θα ήταν δυνατόν σε γλώσσες όπως η C++ ή η Java. Διακρίνεται λόγω του ότι έχει πολλές βιβλιοθήκες που διευκολύνουν ιδιαίτερα αρκετές συνηθισμένες εργασίες και για την ταχύτητα εκμάθησης της.
-</p>
+<p>Η <b> Python</b> είναι μια δυναμική αντικειμενοστραφής γλώσσα προγραμματισμού που μπορεί να χρησιμοποιηθεί για πολλά είδη ανάπτυξης λογισμικού. Προσφέρει ισχυρή υποστήριξη για ενσωμάτωση με άλλες γλώσσες και εργαλεία, και διαθέτει μία πλούσια γκάμα βιβλιοθηκών. <br>
+Η Python δημιουργήθηκε από τον Ολλανδό Γκβίντο βαν Ρόσσουμ (Guido van Rossum) το 1990. Ο κύριος στόχος της είναι η αναγνωσιμότητα του κώδικά της και η ευκολία χρήσης της και το συντακτικό της επιτρέπει στους προγραμματιστές να εκφράσουν έννοιες σε λιγότερες γραμμές κώδικα απ'ότι θα ήταν δυνατόν σε γλώσσες όπως η C++ ή η Java. Διακρίνεται λόγω του ότι έχει πολλές βιβλιοθήκες που διευκολύνουν ιδιαίτερα αρκετές συνηθισμένες εργασίες και για την ταχύτητα εκμάθησης της.</p>
     </div>
-
     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
       <h5>intro</h5>
   <p>xx
@@ -191,13 +197,22 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
 <!-- top -->
  <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing</span></div>
-<!-- Go to www.addthis.com/dashboard to customize your tools --><div class="addthis_inline_share_toolbox"></div>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+
+<div class="addthis_inline_share_toolbox"></div>
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
   <style>div.a {font-size: 12px;}</style>
 <div class="a">
 <p>© 2020 AlexandrosHub  All rights reserved. | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> </p></div>
 </footer>
 <!-- ////////// End Footer 2020 ////////// -->
+
+<!-- ////////// Scripts Zone ////////// -->
+
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script>
+<!-- googletagmanager -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
+<script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-128580719-1'); </script>
 
 
 <script> // Tabbed Menu
