--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@ body, html {
     background-position: center;
     background-size: cover;
     background-image: url("https://66.media.tumblr.com/a28d0e003dc51bc821c3ffac661a9702/tumblr_pbnlsrwxmW1si59zfo9_1280.png");
-    min-height: 55%;
+    min-height: 75%;
 }
 .menu {
     display: none;
@@ -53,6 +53,7 @@ body, html {
 <!-- Top menu -->
 <div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
 <!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
+<!-- name --><a class="w3-padding-16 w3-hide-small w3-right"><b><font color="white">/</font><font color="orange">Portfolio  &nbsp; &nbsp; </font></b></a>
 <!-- logo --><div class="w3-padding-16">  <a href="https://alexandroshub.github.io">
 <img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;"></a>
     </div> 
@@ -90,12 +91,13 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 
 
 	<span class="w3-text-white w3-hide-small" style="font-size:130px">
-    <b><font color="#FF5733">/</font></b>Portfolio</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px"> <b><font color="#FF5733">/</font></b>Portfolio</span>
+    <b><font color="#FF9900">/</font></b>Portfolio</span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px"> <b><font color="#FF9900">/</font></b>Portfolio</span>
 
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 30.08.2019</span>
+     <a href="https://alexandroshub.github.io/codingzone" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> Coding <font color="red"> <i class="fa fa-code"></i>Zone</font></b></a>
+    <a href="https://alexandroshub.github.io/cono" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> try <font color="cyan"><i class="fa fa-connectdevelop fa-fw"></i> CONO</font></b></a>
   </div>
 </header>
 
@@ -295,11 +297,10 @@ Files & Publications</div>
   
   
     <div class="w3-col m6">
-    <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
-       <span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/cpp.html"><b>C / C++</b></a></span>
-    <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/python.html"><b>Python</b></a></span>
-     <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/arduino.html"><b>ARDUINO</b></a></span>
-  <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/raspberrypi"><b>raspberrypi</b></a></span>
+  
+  <!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
+
+
     </div>
     <div class="w3-col m6">
      <!--    ================ -->
@@ -319,22 +320,24 @@ Files & Publications</div>
   </div>
 </div>
 
-<!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
 
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-<!-- top --> <h1>Alexandros Hub</h1>
-<a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
- 
+<!-- ////////// Footer 2020 ////////// --> 
+<footer class="w3-center w3-black ">
+<a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
+<!-- top -->
+ <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing</span></div>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
 
-<div class="w3-center w3-padding-32"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
-
-  <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
+<div class="addthis_inline_share_toolbox"></div>
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
   <style>div.a {font-size: 12px;}</style>
 <div class="a">
 <p>© 2020 AlexandrosHub  All rights reserved. | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> </p></div>
 </footer>
+<!-- ////////// End Footer 2020 ////////// -->
+
+<!-- ////////// Scripts Zone ////////// -->
 
 <script> // Tabbed Menu
 function openMenu(evt, menuName) {
