--- a/python.html
+++ b/python.html
@@ -1,4 +1,5 @@
-<!-- SpecialPage Python_V.28.03.20
+
+<!-- SpecialPage Python_V.31.03.20
 
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -65,7 +66,7 @@ body, html {
 <!-- Top menu -->
 <div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
 <!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
-<!-- name --><a class="w3-padding-16 w3-hide-small w3-right"><b><font color="white">/</font><font color="orange">Python  &nbsp; &nbsp; </font></b></a>
+<!-- name --><a class="w3-padding-16 w3-hide-small w3-right"><b><font color="white"> / </font><font color="orange"> Python  &nbsp; &nbsp; </font></b></a>
 <!-- logo --><div class="w3-padding-16">  <a href="https://alexandroshub.github.io">
 <img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;"></a>
     </div> 
@@ -118,17 +119,18 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 	</div>
   <div class="w3-display-middle w3-center">
 
-	<span class="w3-text-white w3-hide-small" style="font-size:130px">#python</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#python</span>
- </div>
- </header>
 
+<span class="w3-text-white w3-hide-small" style="font-size:130px">
+    <b><font color="#FF9900">/</font></b>Python</span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px"> <b><font color="#FF9900">/</font></b>Python</span>
+ 
+ </div>
+ 
+<div class="w3-display-bottomright w3-center w3-padding-large"><a href="https://github.com/alexandroshub/python" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> My <font color="red"> <i class="fa fa-github-alt"></i>Projects</font></b></a></div>
+
+</header>
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
-
-
-
-
 
 <!-- Menu Container -->
 <div class="w3-container" id="menu">
