--- a/python.html
+++ b/python.html
@@ -1,4 +1,3 @@
-
 <!-- SpecialPage Python_V.31.03.20
 
 
@@ -152,10 +151,14 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 Η Python δημιουργήθηκε από τον Ολλανδό Γκβίντο βαν Ρόσσουμ (Guido van Rossum) το 1990. Ο κύριος στόχος της είναι η αναγνωσιμότητα του κώδικά της και η ευκολία χρήσης της και το συντακτικό της επιτρέπει στους προγραμματιστές να εκφράσουν έννοιες σε λιγότερες γραμμές κώδικα απ'ότι θα ήταν δυνατόν σε γλώσσες όπως η C++ ή η Java. Διακρίνεται λόγω του ότι έχει πολλές βιβλιοθήκες που διευκολύνουν ιδιαίτερα αρκετές συνηθισμένες εργασίες και για την ταχύτητα εκμάθησης της.</p>
     </div>
     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
-      <h5>intro</h5>
-  <p>xx
+      <h5></h5>
+  <p>
+  <a href=" https://www.python.org/ " class="w3-button w3-blue">python</a>
+  <a href="https://www.pythonforbeginners.com/ " class="w3-button w3-blue">pythonforbeginners</a>
+  <a href="https://pyformat.info/" class="w3-button w3-blue">pyformat</a>
+  <a href="  https://www.jetbrains.com/pycharm/" class="w3-button w3-blue">pycharm</a>
 
-</p><a href="xx" class="w3-button w3-blue"><i class="fa fa-th"> </i>xx</a>
+</p>
     </div>  
    
     <br>
@@ -185,7 +188,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
 	  
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">PROJECTS</span></h5>
-  <span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
+    <span class="w3-tag w3-red">Περισσότερα σύντομα!!</span>
     <p><strong>και μή ξεχνάτε.</strong> Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα, ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger. </p>
     
   </div>
