--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.27.3.20
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.1.4.20
 <!--
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -15,7 +16,7 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou | index</title>
+<title>Papaspyrou | Home</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <head>
 <meta charset="UTF-8">
@@ -63,6 +64,8 @@ body, html { height: 100%; line-height: 1.8;}
 <!-- //////////////////////////Top menu////////////////////////// -->
 <div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
 <!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
+
+<a href="https://alexandroshub.github.io/quarantine.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="red">Quarantine</font></b></a>
 <!-- contact --><a href="https://alexandroshub.github.io/contact.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-envelope"></i></font></b></a>
 <!-- me --><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-user"></i></font></b></a>
 <!-- files --><a href="https://alexandroshub.github.io/portfolio.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-th"></i></font></b></a>
@@ -74,10 +77,11 @@ body, html { height: 100%; line-height: 1.8;}
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"><i class="fa fa-times-circle"></i> &nbsp;  Close</a>
+ <a href="https://alexandroshub.github.io/quarantine.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white"><b><font color="red">Quarantine</font></b></a> 
   <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-folder-open-o"></i>&nbsp;  Portfolio</a>
-	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
-	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
-    <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
+	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
+	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
+    <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
 </nav>
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
