--- a/internetexplorer.html
+++ b/internetexplorer.html
@@ -188,6 +188,13 @@ function w3_close() {mySidebar.style.display = "none";} </script>
         
         
         --> 
+	  
+<br><span class="w3-tag w3-black">BETTER YOU</span><br>
+        <a href="https://www.bignox.com/">bignox</a> |    
+        <a href="https://www.memuplay.com/">memuplay</a> |    
+        <a href="https://www.andyroid.net/">andyroid</a> |    
+        <a href="https://www.bluestacks.com/">bluestacks</a> |    
+	  
 <br><span class="w3-tag w3-black">MAKE</span>
     <br><span class="w3-red">Chip</span>
         <a href="http://makezine.com/">makezine</a>|
