--- a/logo.html
+++ b/logo.html
@@ -6,6 +6,14 @@
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
 Last Update: 27/9/2017  |  Pre-alpha Stage -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Logo</title>
+</head>
+<style>
 html {
   height: 100%;
 }
@@ -37,6 +45,21 @@ body {
   padding: 0 1vw 1vw 1vw;
   display: inline-block;
 }
+</style>
+<body>
+
+<div class="hub">
+  <span contenteditable="true">Alexandros</span>
+  <span contenteditable="true">hub</span>
+</div>
+
+</body>
+</html>
+
+
+
+
+
 <!--
 That's all folks! 
 
