--- a/logo.html
+++ b/logo.html
@@ -31,7 +31,7 @@ body {
   display: block;
   font-family: sans-serif;
   font-weight: bold;
-  font-size: 9vw;
+  font-size: 6vw; /*9
   position: absolute;
   top: 50%;
   left: 50%;
