--- a/logo.html
+++ b/logo.html
@@ -1,68 +1,8 @@
-<!--LOGOwebpage
-
-░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
-▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
-▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 27/9/2017  |  Pre-alpha Stage -->
-
-
-<!DOCTYPE html>
-<html>
-<head>
-<title>Logo</title>
-</head>
-<style>
-html {
-  height: 100%;
-}
-
-body {
-  background: #000000;
-  color: #ffffff;
-  margin: 0;
-  min-height: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.hub {
-  display: block;
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 6vw; /*9
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.hub span:nth-child(2) {
-  background: #FF9900;
-  color: #000000;
-  border-radius: 1vw;
-  padding: 0 1vw 1vw 1vw;
-  display: inline-block;
-}
-</style>
-<body>
-
-<div class="hub">
-  <span contenteditable="true">Alexandros</span>
-  <span contenteditable="true">hub</span>
-</div>
-
-</body>
-</html>
-
-
-
-
-
-<!--
-That's all folks! 
-
-Mail: a-papaspyrou@outlook.com.gr  
-Mob: 00306949452023
--->
+<!DOCTYPE html><html><head><title>Logo</title></head><style>
+html {height: 100%;}
+body { background: #000000; color: #ffffff; margin: 0; min-height: 100%; height: 100%; position: relative;}
+.hub { display: block; font-family: sans-serif; font-weight: bold; font-size: 9vw; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
+.hub span:nth-child(2) { background: #FF9900; color: #000000; border-radius: 1vw; padding: 0 1vw 1vw 1vw; display: inline-block;}
+</style><body>
+<div class="hub"><span contenteditable="true">Alexandros</span><span contenteditable="true">hub</span></div>
+</body></html>
