--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.1.4.20
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.3.4.20
 <!--
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
-Version:	SE_19 @ Ath/Gr
 Contact: 	a-papaspyrou@outlook.com.gr
 Mob: 		00306940548867
 Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.alexandros@gmail.com
@@ -131,11 +129,11 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
      <center>
-      <div class="w3-third w3-hide-small">
+      <div class="w3-third">
    <h3>Plus</h3>
-   <a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black"> <i class="fa fa-code"></i></a>
+   <a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black"> <i class="fa fa-plus"></i></a>
 <div class="w3-row " style="padding-bottom:16px">
-<p>η αγαπημένη μου ενότητα! podcasting, blogging, videos, links  και ότι άλλο μπορεί να προκύψει.</p>
+<p>Η αγαπημένη μου ενότητα! podcasting, blogging, videos, links  και ότι άλλο μπορεί να προκύψει.</p>
     
 </div>
     </div>
@@ -149,10 +147,8 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
  </p>
       
     </div></div>
-    <div class="w3-third w3-hide-small">
-   <h3>
-   
-   About Me.</h3>
+    <div class="w3-third">
+   <h3> About Me.</h3>
    <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black">  <i class="fa fa-user-o"></i></a>
   
 <div class="w3-row " style="padding-bottom:16px">
@@ -167,18 +163,24 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
 -->
  
-
-<!-- Footer --> 
+<!-- ////////// Footer 2020 ////////// --> 
 <footer class="w3-center w3-black ">
 <a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
 <!-- top -->
  <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing</span></div>
-<!-- Go to www.addthis.com/dashboard to customize your tools --><div class="addthis_inline_share_toolbox"></div>
-  <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+
+<div class="addthis_inline_share_toolbox"></div>
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
   <style>div.a {font-size: 12px;}</style>
 <div class="a">
-<p>© 2020 AlexandrosHub  All rights reserved. | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> </p></div>
+<p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
+<i class="fa fa-creative-commons"></i>
+2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> </p></div>
 </footer>
+<!-- ////////// End Footer 2020 ////////// -->
+
+
 <script>// Modal Image Gallery
 function onClick(element) {
   document.getElementById("img01").src = element.src;
