--- a/vip.dashboard.html
+++ b/vip.dashboard.html
@@ -1,4 +1,5 @@
-<!-- dashboard _Jul2019_  -->
+
+<!-- dashboard 2020   -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -48,12 +49,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 
 <!-- BAR Section //////////////////////////////////////////////////////////-->
 <div class="w3-bar w3-dark-grey  w3-large ">
-<a class="w3-bar-item"><i class="fa fa-clock-o"></i> COMMING SOON</a>
-<a href="https://alexandroshub.github.io/index" class="w3-red w3-bar-item w3-button  w3-right"><i class="fa fa-sign-in w3-margin-right" ></i><b>HOME
+<a class="w3-bar-item">Control Panel</a>
+<a href="https://alexandroshub.github.io/index" class="w3-green w3-bar-item w3-button  w3-right"><i class="fa fa-sign-in w3-margin-right" ></i><b>HOME
 </b></a>
 </div><!-- ////////////////////////////////////////////////////////// -->
 
-<p>Date/Time: <span id="datetime"></span></p>
+<p><span id="datetime"></span></p>
 <script>
 var dt = new Date();
 document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +"."+ (("0"+(dt.getMonth()+1)).slice(-2)) +"."+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()).slice(-2)) +":"+ (("0"+dt.getMinutes()).slice(-2));
@@ -67,6 +68,8 @@ document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +
             </div>
           </div>
         </div>
+            <p><a href="https://discord.gg/WAnYJjD" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> Chat on  <font color="orange">Discord</font></b></a>
+        
         
 </body>
 </html>
