--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <button onclick="skype()" class="w3-button w3-blue" ><i class="fa fa-skype"></i></button><script>function skype() { alert("a-papaspyrou@outlook.com.gr");}</script>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black"><i class="fa fa-envelope-o w3-hover-opacity"></i></a>
 </p>
-
+<a href="https://discord.gg/WAnYJjD" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> Chat on  <font color="orange">Discord</font></b></a>
 <h5>SOCIAL</h5><p>
 <a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
 <a class="w3-button w3-light-grey" href=" https://gr.linkedin.com/in/alexandrospapaspyrou  "><i class="fa fa-linkedin"></i></a>
