--- a/contact.html
+++ b/contact.html
@@ -97,9 +97,10 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
  <a class="w3-button w3-red" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top">Sent me Email<i class="w3-margin-left fa fa-envelope"></i></a>
   <a class="w3-button w3-blue" href="https://m.me/papaspyrou.alexandros"> Sent me Message<i class="w3-margin-left fa fa-comments-o"></i></a>
   <a class="w3-button w3-green" href="tel:+306940548867">Call Me<i class="w3-margin-left fa fa-phone"></i></a>
+  
+  <a class="w3-button w3-blue" href="skype:live:48c538b11931770b?call">Call Me <i class="fa fa-skype"></i></a>
 
-<button onclick="skype()" class="w3-button w3-blue" ><i class="fa fa-skype"></i></button><script>function skype() { alert("a-papaspyrou@outlook.com.gr");}</script>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black"><i class="fa fa-envelope-o w3-hover-opacity"></i></a>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black">Forma</a>
 </p>
 <a href="https://discord.gg/WAnYJjD" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> Chat on  <font color="orange">Discord</font></b></a>
 <h5>SOCIAL</h5><p>
