--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, html { height: 100%; line-height: 1.8;}
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="#FF9900"
+  theme_color="#72c494"
   logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
   logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
 </div>
