--- a/internetexplorer.html
+++ b/internetexplorer.html
@@ -1,3 +1,4 @@
+
 <!-- SpecialPage Links
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -55,7 +56,7 @@ body, html {
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="#FF9900"
+  theme_color="#72c494"
   logged_in_greeting="Γειά σου. Στείλε ένα πρόβλημα ή ένα νέο link!"
   logged_out_greeting="Γειά σου. Στείλε ένα πρόβλημα ή ένα νέο link!">
 </div>
@@ -296,6 +297,8 @@ https://subscribe.packtpub.com/
         <a href="http://www.pcsteps.gr/">pcsteps</a> | 
         <a href="https://www.adslgr.com">adslgr</a> | 
         <a href="https://dimitrology.com/">dimitrology</a> |        
+		<a href="https://thehackernews.com/">thehackernews</a> |   
+		<a href="https://blog.elcomsoft.com/">elcomsoft</a> |   
 <br><span class="w3-red"> MAGAZINE </span>
 		<a href="https://gr.pcmag.com/">pcmag</a> |         
         <a href="http://www.onlinemagazine.gr/">onlinemagazine</a> |    
@@ -345,6 +348,8 @@ https://subscribe.packtpub.com/
 <name style=" font-family:Londrina Shadow; font-size:40px;">TOOLS | PROGRAMMES | MAKE</name></center><br>
 
 <br><span class="w3-tag w3-black">PROGRAMMES</span><span class="w3-tag w3-purple"><a href="https://gr.giveawayoftheday.com/">giveawayoftheday</a></span>
+<br><span class="w3-red">linux</span>
+		<a href="https://rufus.ie/">rufus</a> | 
   	<br><span class="w3-red">OPEN</span>
 		<a href="http://www.linuxinsider.gr/">linuxinsider</a> | 
         <a href="https://www.apachefriends.org/index.html">apachefriends</a> |  
@@ -386,6 +391,7 @@ https://subscribe.packtpub.com/
     <br><span class="w3-red">eMail</span>
 		<a href="https://protonmail.com/">protonmail</a>  |  
         <a href="https://www.gmx.com/">gmx</a>  |  
+        <a href="https://lavabit.com/">lavabit</a>  |  
     <br><span class="w3-red">WEB</span>
         <a href="https://www.webnode.gr/">webnode</a>| 
         <a href="https://www.yola.com">Yola</a>| 
@@ -444,6 +450,10 @@ https://subscribe.packtpub.com/
         <a href="https://www.w3schools.com">w3schools</a>|
         <a href="https://css-tricks.com/">css-tricks</a>|
         <a href="https://codyhouse.co/">codyhouse</a>|
+        <a href="https://codepen.io/">codepen</a>|        
+<br><span class="w3-red">Programming</span>
+        <a href="https://www.ruby-lang.org/en/">ruby</a>|
+		<a href="https://pythonprogramming.net/">pythonprogramming</a>|
 <br><span class="w3-blue">widgets</span>       
 		<a href="https://the-best-widgets.blogspot.com/">theΒest</a>|
         <a href="http://www.bloggertips.gr/">Βloggertips</a>|
